Fixed overscrolling over image edges, added two zoom modes, fixed unintended canvas stretching on window resize

--- a/src/index.css
+++ b/src/index.css
@@ -147,10 +147,17 @@ button:hover, select:hover {
 
 .mapier-canvas {
     position:absolute;
-    top:30px;
-    left:0px;
+
+    left: 0;
+    right: 0; 
+
+    /* these two: good for zoom mode */
     width:100%;
+    /* * * * */
+    
+    /*margin:auto;*/
     image-rendering: pixelated; 
+    /*border: 1px #000000 solid;*/
 }
 
 .mapier-canvas:hover .cursor {
@@ -158,17 +165,24 @@ button:hover, select:hover {
 }
 
 #canvas-draw {
+    z-index: 2 !important;
+
     opacity:0.5;
 }
 
 #canvas-temp {
-    display: none;
-    /*position:absolute;
-    top:1200px;*/
+    z-index: 1 !important;
+    display: none; 
 }
 
+#canvas-image {
+    z-index: 0 !important;
+    /*display: none;*/
+}
+
+
 .cursor {
-    z-index: 10000;
+    z-index: 3;
     position:absolute;
     width: 0px;
     height: 0px;
@@ -185,10 +199,10 @@ button:hover, select:hover {
    /*accent-color: #000000;*/
 }
 
-.path-button {
+.parameter-buttom {
     display:flex;
 }
-.path-button span {
+.parameter-buttom span {
     line-height: 20px;
 }
 
@@ -234,6 +248,9 @@ button:hover, select:hover {
     padding-left:5px;
     padding-right:5px;
     padding-top:2px;
+    width: min-content;
+    white-space: nowrap;
+    float: right;
 }
 
 .selectable:hover {
@@ -241,7 +258,7 @@ button:hover, select:hover {
 }
 
 /*style items (options):*/
-.select-items {
+.item-list {
     position: absolute;
     top: 100%;
     /*left: 100%;*/
@@ -263,19 +280,24 @@ button:hover, select:hover {
 /* add placeholders to contenteditable divs */ 
 div[placeholder]:empty:before {
     content: attr(placeholder);
-    color: #555; 
+    color: #FFFFFF; 
+    opacity:0.75;
 }
 
 /* add placeholders to contenteditable spans */ 
 span[placeholder]:empty:before {
     content: attr(placeholder);
-    color: #555; 
+    color: #FFFFFF; 
+    opacity:0.75;
+
 }
 
 
 .peng[placeholder]:empty:before {
     font-style: italic;
     content: attr(placeholder);
-    color: #555; 
+    color: #FFFFFF; 
+    opacity:0.75;
+
 }
   
